--- a/invite.html
+++ b/invite.html
@@ -311,7 +311,8 @@
     })();
   </script>
 
-  <script src="sb-user.js"></script>
+  <script src="sb-config.js"></script>
+<script src="sb-user.js"></script>
   <script src="common-nav.js"></script>
 
   <script>
