--- a/login.html
+++ b/login.html
@@ -845,6 +845,7 @@
     });
   </script>
 
+<script src="sb-config.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="auth.js"></script><script src="common-nav.js"></script>
 <div aria-hidden="true" class="area-modal">
