--- a/my-assets.html
+++ b/my-assets.html
@@ -747,8 +747,10 @@
   }
 })();
 </script>
+<script src="sb-config.js"></script>
 <script src="auth.js"></script>
 <script src="sb-balance.js"></script>
+<script src="sb-assets.js"></script>
 <script src="common-nav.js"></script>
 </body>
 </html>
