--- a/withdraw.html
+++ b/withdraw.html
@@ -93,7 +93,8 @@
   </div>
 
   
-  <script src="wallet.js"></script>
+  <script src="sb-config.js"></script>
+<script src="wallet.js"></script>
   <script>
     (function() {{
       var qtyInput = document.getElementById('qtyInput');
