--- a/account-information.html
+++ b/account-information.html
@@ -320,7 +320,8 @@
 
   <div id="toast" class="toast-message"></div>
 
-  <script src="auth.js"></script>
+  <script src="sb-config.js"></script>
+<script src="auth.js"></script>
 <script src="sb-user.js"></script>
 <script>
     
