--- a/member.html
+++ b/member.html
@@ -940,6 +940,7 @@
   })();
 </script>
 
+<script src="sb-config.js"></script>
 <script src="auth.js"></script>
 <script src="common-nav.js"></script>
 
