--- a/my-team.html
+++ b/my-team.html
@@ -562,7 +562,8 @@
   </script>
 
 
-  <script src="sb-user.js"></script>
+  <script src="sb-config.js"></script>
+<script src="sb-user.js"></script>
   <script src="wallet.js"></script>
 
   <script>
