--- a/signup.html
+++ b/signup.html
@@ -559,6 +559,7 @@
 </div>
 </div>
 <div class="toast-message" id="form-toast"></div>
+<script src="sb-config.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script>
